<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:orientation="vertical"

    >

    <LinearLayout
        android:id="@+id/row0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cell00"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:background="@color/colorFon"
            android:gravity="end"
            android:text="@string/tcell00"
            android:textSize="70dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrap_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="В"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Е"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/view1"
                app:layout_constraintRight_toLeftOf="@+id/view3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Р"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/view2"
                app:layout_constraintRight_toLeftOf="@+id/view4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Т"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/view3"
                app:layout_constraintRight_toLeftOf="@+id/view5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />


            <TextView
                android:id="@+id/view5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="И"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/view4"
                app:layout_constraintRight_toLeftOf="@+id/view6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/view6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="К"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/view5"
                app:layout_constraintRight_toLeftOf="@+id/view7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/view7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="А"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/view6"
                app:layout_constraintRight_toLeftOf="@+id/view8"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/view8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Л"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/view7"
                app:layout_constraintRight_toLeftOf="@+id/view9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/view9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ь"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/view8"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row0"
            >


            <Button
                android:id="@+id/key7"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key7"
                android:textSize="40dp"
                android:onClick="onClick"
                />

            <Button
                android:id="@+id/key8"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key8"
                android:textSize="40dp"
                android:onClick="onClick"
                />

            <Button
                android:id="@+id/key9"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key9"
                android:textSize="40dp"
                android:onClick="onClick"
                />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row1"

            >


            <Button
                android:id="@+id/key4"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key4"
                android:textSize="40dp"
                android:onClick="onClick"
                />

            <Button
                android:id="@+id/key5"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key5"
                android:textSize="40dp"
                android:onClick="onClick"
                />

            <Button
                android:id="@+id/key6"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key6"
                android:textSize="40dp"
                android:onClick="onClick"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row2"

            >

            <Button
                android:id="@+id/key1"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/key1"
                android:textSize="40dp"
                />

            <Button
                android:id="@+id/key2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key2"
                android:textSize="40dp"
                android:onClick="onClick"
                />

            <Button
                android:id="@+id/key3"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key3"
                android:textSize="40dp"
                android:onClick="onClick"
                />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row3"

            >

            <Button
                android:id="@+id/key0"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="33"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/key0"
                android:textSize="40dp"
                android:onClick="onClick"
                />

            <Button
                android:id="@+id/keyPoint"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="7"
                android:background="@color/colorKey"
                android:gravity="center"
                android:text="@string/keyPoint"
                android:textSize="40dp"
                android:onClick="onClick"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


